<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>us.cjparker</groupId>
  <artifactId>beaver-vs-tiger</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>beaver-vs-tiger</name>
  <description>Video game pitting a beaver against a tiger</description>
  <inceptionYear>2014</inceptionYear>
  <packaging>jar</packaging>
  <url>http://128.222.228.153:8080</url>

  <licenses>
    <license>
      <name>My License</name>
      <url>http://....</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
    <encoding>UTF-8</encoding>
    <scala.version>2.10.3</scala.version>
    <processing.version>1.0</processing.version>
  </properties>

  <repositories>
    <repository>
      <id>jboss</id>
      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
    </repository>

    <repository>
      <id>sonatype</id>
      <url>http://oss.sonatype.org/content/repositories/releases/</url>
    </repository>

    <repository>
      <id>codehaus-mojos</id>
      <url>https://nexus.codehaus.org/content/groups/snapshots-group/</url>
    </repository>

    <repository>
      <id>local-repo</id>
      <name>local-repo</name>
      <url>file:${project.basedir}/local-repo</url>
    </repository>

  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>codehaus-mojos</id>
      <url>https://nexus.codehaus.org/content/groups/snapshots-group/</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency>
    <dependency>
      <groupId>org.processing</groupId>
      <artifactId>core</artifactId>
      <version>${processing.version}</version>
    </dependency>
    <dependency>
      <groupId>org.processing</groupId>
      <artifactId>gluegen-rt</artifactId>
      <version>${processing.version}</version>
    </dependency>
    <dependency>
      <groupId>org.processing</groupId>
      <artifactId>gluegen-rt-natives-mac-univ</artifactId>
      <version>${processing.version}</version>
    </dependency>
    <dependency>
      <groupId>org.processing</groupId>
      <artifactId>jogl</artifactId>
      <version>${processing.version}</version>
    </dependency>
    <dependency>
      <groupId>org.processing</groupId>
      <artifactId>opengl</artifactId>
      <version>${processing.version}</version>
    </dependency>
    <!--dependency>
      <groupId>org.processing</groupId>
      <artifactId>opengl-osx-universal</artifactId>
      <version>${processing.version}</version>
    </dependency-->
    <dependency>
      <groupId>org.krister</groupId>
      <artifactId>ess</artifactId>
      <version>${processing.version}</version>
    </dependency>
    <dependency>
      <groupId>org.scalatest</groupId>
      <artifactId>scalatest_2.10</artifactId>
      <version>2.0</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.scala-lang</groupId>
          <artifactId>scala-library</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.codehaus.mojo.webstart</groupId>
      <artifactId>webstart-maven-plugin</artifactId>
      <version>1.0-beta-2-SNAPSHOT</version>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src/main/scala</sourceDirectory>
    <testSourceDirectory>src/test/scala</testSourceDirectory>


    <plugins>
      <!-- for compiling scala -->
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <version>3.1.2</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <sourceDir>src/main/scala</sourceDir>
          <fork>true</fork>
          <args>
            <arg>-Dscalac.patmat.analysisBudget=4096</arg>
            <arg>-deprecation</arg>
            <arg>-feature</arg>
            <arg>-Xlint</arg>
            <arg>-unchecked</arg>
            <arg>-language:implicitConversions</arg>
            <arg>-language:postfixOps</arg>
          </args>
          <jvmArgs>
            <jvmArg>-client</jvmArg>
            <jvmArg>-XX:ReservedCodeCacheSize=128m</jvmArg>
            <jvmArg>-XX:MaxPermSize=256M</jvmArg>
            <jvmArg>-Xms2048m</jvmArg>
            <jvmArg>-Xmx2048m</jvmArg>
          </jvmArgs>
        </configuration>
      </plugin>

      <!-- disable surefire, use scalatest plugin instead -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12</version>
        <configuration>
          <junitxml>.</junitxml>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>

      <!-- scalatest -->
      <plugin>
        <groupId>org.scalatest</groupId>
        <artifactId>scalatest-maven-plugin</artifactId>
        <version>1.0-M4-SNAP1</version>
        <configuration>
          <systemProperties>
            <java.awt.headless>true</java.awt.headless>
          </systemProperties>
          <junitxml>.</junitxml>
          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
          <filereports>WDF TestSuite.txt</filereports>
          <htmlreporters>${project.build.directory}/html</htmlreporters>
          <testFailureIgnore>false</testFailureIgnore>
        </configuration>
        <executions>
          <execution>
            <id>test</id>
            <goals>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- JNLP PLUGIN -->
      <plugin>
        <groupId>org.codehaus.mojo.webstart</groupId>
        <artifactId>webstart-maven-plugin</artifactId>
        <version>1.0-beta-2-SNAPSHOT</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jnlp</goal>
              <!-- use jnlp, jnlp-inline or jnlp-single as appropriate -->
            </goals>
          </execution>
        </executions>
        <configuration>
          <!--outputDirectory></outputDirectory-->
          <!-- not required?? -->
          <!--
          Set to true to exclude all transitive dependencies. Default is false.
          -->
          <excludeTransitive>false</excludeTransitive>
          <!-- The path where the libraries are stored within the jnlp structure. not required. by default the libraries are within the working directory -->
          <!--libPath>lib</libPath-->
          <!--resourcesDirectory>${project.basedir}/src/main/jnlp/resources</resourcesDirectory-->
          <!-- default value -->
          <!-- JNLP generation -->
          <jnlp>
            <!-- default values -->
            <!--inputTemplateResourcePath>${project.basedir}</inputTemplateResourcePath-->
            <!--inputTemplate>src/main/jnlp/template.vm</inputTemplate-->
            <!-- relative to inputTemplateResourcePath -->
            <outputFile>beaver.jnlp</outputFile>
            <!-- defaults to launch.jnlp -->
            <!-- used to automatically identify the jar containing the main class. -->
            <!-- this is perhaps going to change -->
            <mainClass>us.cjparker.BeaverVsTigerMain</mainClass>
          </jnlp>
          <!-- BUILDING PROCESS -->
          <pack200>true</pack200>
          <gzip>false</gzip>
          <!-- default force when pack200 false, true when pack200 selected ?? -->
          <!-- causes a version attribute to be output in each jar resource element, optional, default is false -->
          <outputJarVersions>false</outputJarVersions>
          <!--install>false</install-->
          <!-- not yet supported -->
          <verbose>true</verbose>
        </configuration>
      </plugin>


      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.2.1</version>
        <executions>
          <execution>
            <goals>
              <goal>java</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <mainClass>us.cjparker.BeaverVsTigerMain</mainClass>
        </configuration>
      </plugin>



      <!-- jarsigner -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jarsigner-plugin</artifactId>
        <version>1.2</version>
        <executions>
          <execution>
            <phase>package</phase>
            <id>sign</id>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <keystore>${basedir}/beaver</keystore>
          <alias>beaver</alias>
          <storepass>beaver</storepass>
          <keypass>beaver</keypass>
          <removeExistingSignatures>true</removeExistingSignatures>
          <archiveDirectory>${project.build.directory}</archiveDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
